--- a/src/modules/styles/Header.module.css
+++ b/src/modules/styles/Header.module.css
@@ -25,13 +25,14 @@
 }
 
 .options {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .option {
+  display: block;
   font-size: 0.75rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
