--- a/src/modules/styles/Header.module.css
+++ b/src/modules/styles/Header.module.css
@@ -3,45 +3,95 @@
   color: white;
 }
 
-.container {
-  padding-left: 5.5rem;
-  padding-right: 5.5rem;
-}
-
 .nav_brand {
   display: flex;
-  flex-direction: row;
-  padding-top: 0.5rem;
-  padding-bottom: 0rem;
+  flex-direction: column;
+  padding: 0.5rem 0rem;
   justify-content: space-between;
+  align-items: initial;
+  width: 100%;
+  height: 100%;
 }
 
 .pixelart {
   image-rendering: pixelated;
-  margin-right: 1rem;
-  margin-top: -0.75rem;
-  height: 2.5rem !important;
-  width: 2.5rem !important;
+  width: 2.5rem;
+  margin: 0rem 1rem;
 }
 
 .options {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  overflow-y: hidden;
+  max-height: 0px;
+  transition: max-height 0.35s ease-in-out;
+}
+
+.options.active {
+  max-height: 500px;
 }
 
 .option {
   display: block;
   font-size: 0.75rem;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+  padding: 0.5rem 0rem;
   color: white;
+  width: 100%;
+  text-align: center;
+}
+
+.option:first-child {
+  padding: 0.6rem 0rem 0.5rem 0rem;
 }
 
 .title {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
-  margin-right: 1rem;
+  margin: 0rem 2rem;
+  position: relative;
+}
+
+.title_button {
+  position: absolute;
+  left: 0px;
+  top: 5px;
+}
+
+.title_brand {
+  display: flex;
+  align-items: center;
+}
+
+.title_text {
+  margin: 0px;
+}
+
+@media only screen and (min-width: 700px) {
+  .nav_brand {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .title_button {
+    display: none;
+  }
+
+  .options {
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-height: 500px;
+  }
+
+  .option {
+    width: fit-content;
+    padding: 0.2rem 1rem 0.2rem 0rem;
+  }
+
+  .option:first-child {
+    padding: 0.2rem 1rem 0.2rem 0rem;
+  }
 }
