--- a/src/modules/styles/Loading.module.css
+++ b/src/modules/styles/Loading.module.css
@@ -1,26 +1,26 @@
-.modal { 
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    background: black;
-    cursor: pointer;
-    opacity: 0.5;
-    transition: all 0.35s ease-in;
-  }
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  background: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  transition: all 0.35s ease-in;
+  z-index: 9999;
+}
 
-  .loading_image_div {
-      display: flex;
-      justify-content: center;
-  }
+.loading_image_div {
+  display: flex;
+  justify-content: center;
+}
 
-  .loading_image {
-    width: 5rem;
-    height: 5rem;
-    position: fixed;
-  }
+.loading_image {
+  width: 5rem;
+  height: 5rem;
+  position: fixed;
+}
